# Botify

./: data  data1  db.sqlite3  pyproject.toml  userInformation
mysite/: processResponse.py  settings.py  spotifyAPI.py  urls.py  userLogin.py  views.py  wastonAssistant.py
statics/: index.css
templates/: chat.html  index.html
