[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
ibm-cloud-sdk-core = "^3.5.2"
ibm-watson = "^5.1.0"
spotipy = "^2.16.1"
[tool.poetry.dev-dependencies]
